--- a/src/ex9_html-css-fundamentals-part1/task-03.css
+++ b/src/ex9_html-css-fundamentals-part1/task-03.css
@@ -15,13 +15,21 @@
 }
 
 .button:before {
-  content: '\2605\A0';
-  color: rgba(0, 0, 0, 0.295);
-  font-size: 1em;
+  display: inline-block;
+  content: "\A0";
+  width: 1.5em;
+  height: 1em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 80'%3E%3Cg%3E%3Ctitle%3EStar%3C/title%3E%3Cpolygon points='40,0 50,30 80,30 55.5,49.5 64,80 40,62 16,80 24.5,49.5 0,30 30,30 ' fill='gray' id='svg_2' stroke='null'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
 .button:after {
-  content: "\A0\2605";
-  color: rgba(0, 0, 0, 0.295);
-  font-size: 1em;
+  display: inline-block;
+  content: "\A0";
+  width: 1.5em;
+  height: 1em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 80'%3E%3Cg%3E%3Ctitle%3EStar%3C/title%3E%3Cpolygon points='40,0 50,30 80,30 55.5,49.5 64,80 40,62 16,80 24.5,49.5 0,30 30,30 ' fill='gray' id='svg_2' stroke='null'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right;
 }
