--- a/src/ex9_html-css-fundamentals-part1/task-03.css
+++ b/src/ex9_html-css-fundamentals-part1/task-03.css
@@ -1,6 +1,7 @@
-.button {
+button {
   display: inline-block;
   margin: 100px;
+  cursor: pointer;
   font: 1.5em sans-serif;
   font-weight: bold;
   text-transform: uppercase;
@@ -14,7 +15,7 @@
               0px 0px 0px 12px rgb(0, 0, 0);
 }
 
-.button:hover {
+button:hover {
   color: gold;
   box-shadow: 0px 0px 2px 2px rgba(99, 99, 99, 0.788),
               0px 0px 0px 8px gold,
@@ -22,7 +23,7 @@
               0px 0px 0px 12px rgb(0, 0, 0);
 }
 
-.button:before, .button:after {
+button:before, button:after {
   display: inline-block;
   content: "\A0";
   width: 1.5em;
@@ -31,15 +32,15 @@
   background-repeat: no-repeat;
 }
 
-.button:before {
+button:before {
   background-position: left;
 }
 
-.button:after {
+button:after {
   background-position: right;
 }
 
-.button:hover:before, .button:hover:after {
+button:hover:before, button:hover:after {
   display: inline-block;
   content: "\A0";
   width: 1.5em;
