kanban header & footer

--- a/src/kanban/style.css
+++ b/src/kanban/style.css
@@ -1,20 +1,1 @@
-@font-face {
-  font-family: Roboto;
-  src: url(/src/kanban/Roboto.ttf)
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-header, footer {
-  height: 55px;
-  background: #0067A3;
-}
-
-main {
-  height: calc(100vh - 110px);
-  background: #0079bf;
-}
+@import "common_header_footer.css";
