--- a/src/kanban/common_header_footer.css
+++ b/src/kanban/common_header_footer.css
@@ -57,7 +57,7 @@ header, footer {
 }
 
 .add_list:hover {
-  box-shadow: 0px 0px 2px 2px black;
+  box-shadow: 0 0 2px 2px black;
 }
 
 .add_list:active {
@@ -73,12 +73,56 @@ header, footer {
 }
 
 .user_menu {
+  position: relative;
   display: flex;
   height: 100%;
   width: 64px;
   align-items: center;
   justify-content: space-evenly;
   cursor: pointer;
+}
+
+.user_menu svg {
+  transition: all .5s linear 0s;
+}
+
+.dropDownMenu {
+  position: absolute;
+  top: 60px;
+  right: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
+.dropDownMenu::before, .dropDownMenu::after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid black;
+  position: absolute;
+  top: -10px;
+  right: 18px;
+}
+
+.dropDownMenu::after {
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid #0079bf;
+  top: -8px;
+  right: 20px;
+}
+
+#account, #tasks, #log_out {
+  padding: 8px;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 3px;
+}
+
+#account:hover, #tasks:hover, #log_out:hover {
+  background-color: #0067A3;
 }
 
 main {
