--- a/src/kanban/common_header_footer.css
+++ b/src/kanban/common_header_footer.css
@@ -126,6 +126,7 @@ body {
   border: 2px solid black;
   border-radius: 5px;
   background: #EBECF0;
+  z-index: 1;
 }
 
 .dropDownMenu::before, .dropDownMenu::after {
