kanban ex 17 & 18 are done

--- a/src/kanban/src/main.css
+++ b/src/kanban/src/main.css
@@ -93,3 +93,22 @@
   font-size: 24px;
   margin-right: 4px;
 }
+
+.empty {
+  height: 200px;
+  width: 400px;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.empty > div {
+  font-size: 28px;
+}
+
+.context-menu {
+  position: absolute;
+  left: 50px;
+  border: 1px black solid;
+  z-index: 1;
+}
