changes by review & some fixes

--- a/src/kanban/src/styles/main.css
+++ b/src/kanban/src/styles/main.css
@@ -10,6 +10,12 @@
   padding: 20px 10px;
 }
 
+.corrector {
+  height: 100%;
+  width: 10px;
+  flex-shrink: 0;
+}
+
 .taskList, .prevTasksList, .prevTasksListUp {
   position: relative;
   display: flex;
